test/Fail/Issue3289-rhs.err
Issue3289-rhs.agda:16.11-13: error: [IllegalHidingInPostfixProjection]
Illegal hiding in postfix projection ⦃ .x ⦄
when scope checking f₁ ⦃ .x ⦄
